# software_design_project

./: .gitignore  pyproject.toml
src/: config.py  main.py  sun.py
src/templates/: how-to.html  index.html  results.html  upload_frontend.html
