[tool.poetry]
name = "software-design-project"
version = "0.0.1"
description = ""
authors = ["KiARC <kiarc@kiarc.win>"]
license = "GPLv3-only"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
