[tool.poetry]
name = "software-design-project"
version = "0.0.1"
description = ""
authors = ["KiARC <kiarc@kiarc.win>"]
license = "GPLv3-only"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
start = "python ./src/main.py"
