[tool.poetry]
name = "software-design-project"
version = "0.0.1"
description = ""
authors = ["KiARC <kiarc@kiarc.win>"]
license = "GPLv3-only"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.3"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pillow = "^10.3.0"
apscheduler = "^3.10.4"
waitress = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev = "flask --app ./src/main.py --debug run"

[tool.poe.tasks.start]
cmd = "waitress-serve main:app"
cwd = "./src"
